# aima-emailer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
aima_emailer/: __init__.py  __main__.py  template.py
deploy/base/: cronjob.yaml  kustomization.yaml  namespace.yaml
deploy/base/config/: aimail.env
