[project]
name = "aima-emailer"
version = "0.1.0"
description = ""
authors = [
    {name = "Sky Moore",email = "i@msky.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "resend (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

aimail = "aima_emailer.__main__:send"
